src/test/ui/suggestions/args-instead-of-tuple.stderr
error[E0061]: this enum variant takes 1 argument but 2 arguments were supplied
  --> $DIR/args-instead-of-tuple.rs:5:36
   |
LL |     let _: Result<(i32, i8), ()> = Ok(1, 2);
   |                                    ^^ -  - supplied 2 arguments
   |
help: use parentheses to construct a tuple
   |
LL |     let _: Result<(i32, i8), ()> = Ok((1, 2));
   |                                       +    +

error[E0061]: this enum variant takes 1 argument but 3 arguments were supplied
  --> $DIR/args-instead-of-tuple.rs:7:46
   |
LL |     let _: Option<(i32, i8, &'static str)> = Some(1, 2, "hi");
   |                                              ^^^^ -  -  ---- supplied 3 arguments
   |
help: use parentheses to construct a tuple
   |
LL |     let _: Option<(i32, i8, &'static str)> = Some((1, 2, "hi"));
   |                                                   +          +

error[E0061]: this enum variant takes 1 argument but 0 arguments were supplied
  --> $DIR/args-instead-of-tuple.rs:9:25
   |
LL |     let _: Option<()> = Some();
   |                         ^^^^-- supplied 0 arguments
   |                         |
   |                         expected 1 argument

error[E0308]: mismatched types
  --> $DIR/args-instead-of-tuple.rs:12:34
   |
LL |     let _: Option<(i32,)> = Some(3);
   |                                  ^ expected tuple, found integer
   |
   = note: expected tuple `(i32,)`
               found type `{integer}`
help: use a trailing comma to create a tuple with one element
   |
LL |     let _: Option<(i32,)> = Some((3,));
   |                                  + ++

error[E0308]: mismatched types
  --> $DIR/args-instead-of-tuple.rs:15:34
   |
LL |     let _: Option<(i32,)> = Some((3));
   |                                  ^^^ expected tuple, found integer
   |
   = note: expected tuple `(i32,)`
               found type `{integer}`
help: use a trailing comma to create a tuple with one element
   |
LL |     let _: Option<(i32,)> = Some((3,));
   |                                    +

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/args-instead-of-tuple.rs:18:5
   |
LL |     two_ints(1, 2);
   |     ^^^^^^^^ -  - supplied 2 arguments
   |
note: function defined here
  --> $DIR/args-instead-of-tuple.rs:23:4
   |
LL | fn two_ints(_: (i32, i32)) {
   |    ^^^^^^^^ -------------
help: use parentheses to construct a tuple
   |
LL |     two_ints((1, 2));
   |              +    +

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/args-instead-of-tuple.rs:20:5
   |
LL |     with_generic(3, 4);
   |     ^^^^^^^^^^^^ -  - supplied 2 arguments
   |
note: function defined here
  --> $DIR/args-instead-of-tuple.rs:26:4
   |
LL | fn with_generic<T: Copy + Send>((a, b): (i32, T)) {
   |    ^^^^^^^^^^^^                 ----------------
help: use parentheses to construct a tuple
   |
LL |     with_generic((3, 4));
   |                  +    +

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/args-instead-of-tuple.rs:29:9
   |
LL |         with_generic(a, b);
   |         ^^^^^^^^^^^^ -  - supplied 2 arguments
   |
note: function defined here
  --> $DIR/args-instead-of-tuple.rs:26:4
   |
LL | fn with_generic<T: Copy + Send>((a, b): (i32, T)) {
   |    ^^^^^^^^^^^^                 ----------------
help: use parentheses to construct a tuple
   |
LL |         with_generic((a, b));
   |                      +    +

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
